# faceapp-backend

./: .env.sample  .gitignore  pyproject.toml
src/: main.py
